[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/title.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/menus/PlayMenu.gd" type="Script" id=3]

[sub_resource type="InputEventAction" id=1]
action = "ui_cancel"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="lan_menu" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="header" type="HBoxContainer" parent="."]
margin_right = 1900.0
margin_bottom = 67.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back_btn" type="Button" parent="header"]
margin_right = 90.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05
custom_fonts/font = ExtResource( 2 )
shortcut_in_tooltip = false
shortcut = SubResource( 2 )
text = "<"

[node name="title" type="Label" parent="header"]
margin_left = 94.0
margin_top = 3.0
margin_right = 1900.0
margin_bottom = 64.0
grow_horizontal = 2
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Jouer"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" type="VBoxContainer" parent="."]
anchor_left = 0.212667
anchor_top = 0.182815
anchor_right = 0.787854
anchor_bottom = 0.797222
margin_left = -0.320007
margin_top = -0.440002
margin_right = 0.319946
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
custom_constants/separation = 29
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="online_btn" type="Button" parent="menu"]
margin_top = 152.0
margin_right = 1104.0
margin_bottom = 252.0
grow_horizontal = 0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = ExtResource( 2 )
text = "Jouer en ligne"

[node name="hbox" type="HBoxContainer" parent="menu"]
margin_top = 281.0
margin_right = 1104.0
margin_bottom = 381.0
custom_constants/separation = 25

[node name="host_btn" type="Button" parent="menu/hbox"]
margin_right = 539.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "CrÃ©er un salon en LAN"

[node name="join_btn" type="Button" parent="menu/hbox"]
margin_left = 564.0
margin_right = 1104.0
margin_bottom = 100.0
grow_horizontal = 0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Rejoindre un salon en LAN"

[node name="local_btn" type="Button" parent="menu"]
margin_top = 410.0
margin_right = 1104.0
margin_bottom = 510.0
grow_horizontal = 0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = ExtResource( 2 )
text = "Jouer en local"
